--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,4 +61,5 @@ dependencies {
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
     implementation(platform("androidx.compose:compose-bom:2024.03.00"))
+    implementation("androidx.navigation:navigation-compose:2.7.7")
 }
